2016-07-18 Fred Gleason <fredg@paravelsystems.com>
	* Changed name of the 'FINISHING UP' section to 'FINAL DETAILS'
	in 'centos6/install_rivendel.sh' and 'centos7/install_rivendell.sh'.
2016-07-19 Fred Gleason <fredg@paravelsystems.com>
	* Added '--server' and '--standalone' installation modes in
	'centos6/install_rivendell.sh'.
	* Split 'common/smb.conf' into separate 'centos6/smb.conf' and
	'centos7/smb.conf' versions.
2016-07-19 Fred Gleason <fredg@paravelsystems.com>
	* Disabled generation of PDF documentation in 'docs/Makefile.am'.
2016-07-19 Fred Gleason <fredg@paravelsystems.com>
	* Fixed typos in 'centos6/install_rivendell.sh' that broke
	installation in '--server' mode.
	* Implemented a '--client' mode in 'centos6/install_rivendell.sh'.
2016-07-19 Fred Gleason <fredg@paravelsystems.com>
	* Fixed guest account configuration in 'centos7/smb.conf'.
	* Fixed a bug in 'centos7/install_rivendell.sh' that caused NFS
	services to fail to be enabled when installing in '--server' mode.
2016-07-19 Fred Gleason <fredg@paravelsystems.com>
	* Removed the 'Optional Actions' section from
	'docs/rivendell-install-rhel7.xml'.
2016-07-19 Fred Gleason <fredg@paravelsystems.com>
	* Updated 'NEWS'.
	* Incremented the package version to 0.7.1.
2016-07-20 Fred Gleason <fredg@paravelsystems.com>
	* Added 'man-pages' to the set of installed packages in
	'centos7/install_rivendell_devel.sh'.
	* Added 'man-pages' to the set of installed packages in
	'centos6/install_rivendell_devel.sh'.
2016-07-21 Fred Gleason <fredg@paravelsystems.com>
	* Added 'xfce4-screenshooter' and 'net-tools' packages to the set
	of installed packages in 'centos7/install_rivendell_devel.sh'.
2016-07-22 Fred Gleason <fredg@paravelsystems.com>
	* Added the 'alsa-utils' package to the set
	of installed packages in 'centos7/install_rivendell_devel.sh'.
2016-07-25 Fred Gleason <fredg@paravelsystems.com>
	* Added the 'cups' package to the set
	of installed packages in 'centos7/install_rivendell.sh'.